--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <!--Do not move the line below-->
     <script src="./dist/DO_NOT_TOUCH.js"></script>
+    <script src="./dist/classes.js"></script>
     <!--Do not move the line above-->
     <script src="./dist/index.js"></script>
   </body>
