--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
 </body>
 <!--Do not move the line below-->
 <script src="./dist/DO_NOT_TOUCH.js"></script>
-<script src="./dist/DataClasses.js"></script>
+<script src="./dist/datatypes.js"></script>
+<script src="./dist/compare.js"></script>
+<script src="./dist/datastructures.js"></script>
+<script src="./dist/algorithms.js"></script>
 <!--Do not move the line above-->
 <script src="./dist/index.js"></script>
 
