--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 <script src="./dist/DO_NOT_TOUCH.js"></script>
 <script src="./dist/datatypes.js"></script>
 <script src="./dist/compare.js"></script>
+<script src="./dist/utility.js"></script>
 <script src="./dist/datastructures.js"></script>
 <script src="./dist/algorithms.js"></script>
 <!--Do not move the line above-->
