--- a/html/index.html
+++ b/html/index.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pokédex</title>
-  <link rel="stylesheet" href="css/index.css" />
+  <link rel="stylesheet" href="../css/index.css" />
   <link rel="icon" href="images/pokeball.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -52,7 +53,13 @@
 <!--Do not move the line below-->
 <script src="./dist/DO_NOT_TOUCH.js"></script>
 <script src="./dist/DataClasses.js"></script>
+<script src="../dist/DO_NOT_TOUCH.js"></script>
+<script src="../dist/datatypes.js"></script>
+<script src="../dist/compare.js"></script>
+<script src="../dist/utility.js"></script>
+<script src="../dist/datastructures.js"></script>
+<script src="../dist/algorithms.js"></script>
 <!--Do not move the line above-->
-<script src="./dist/index.js"></script>
+<script src="../dist/index.js"></script>
 
 </html>
