--- a/html/index.html
+++ b/html/index.html
@@ -44,8 +44,8 @@
 
   <!-- Grid map for display -->
   <!-- !NOT FINISHED CHANGE LATER -->
-  <div class="pokemon-grid-container">
-    <div class="pokemon-grid">
+  <div class="pokemonGridContainer">
+    <div class="pokemonGrid">
     </div>
   </div>
 
