--- a/html/index.html
+++ b/html/index.html
@@ -6,50 +6,62 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pokédex</title>
   <link rel="stylesheet" href="../css/index.css" />
-  <link rel="icon" href="images/pokeball.png" />
+  <link rel="icon" href="../images/pokeball.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
+
   <!-- Title Bar -->
-  <!-- !Can change the font -->
-  <div class="bar">
-    <h1>Pokémon Go! Pokédex</h1>
+  <header class="bar">
+    <a href="/html/index.html" class="logo">
+      <img src="../images/pokeball.png" alt="Logo" width="40" height="40" />
+    </a>
+  
+    <nav class="nav-links">
+      <a href="/html/index.html">Home</a>
+      <!-- TODO Link this to the map -->
+      <a href="/">Map</a>
+    </nav>
+  
     <div class="gradient-bar"></div>
-
-    <!-- TODO Fix the shimmer animation so it matches the same height as the gradient -->
     <div class="shimmer"></div>
-  </div>
-
-
+  </header>
+  
   <!-- Search Bar -->
-  <div class="simpleSearchBar">
-    <h1>Search For Your Pokemon</h1>
-    <input type="text" id="searchBar" placeholder="Search for a Pokémon" />
-    <button type="button" id="searchButton">
-      <i class="fa-solid fa-magnifying-glass"></i> Search
-    </button>
-
-    <button type="button" id="openAdvSearchButton">
-      <i class="fa-solid fa-sliders"></i> Advanced Search
-    </button>
-
+  <div class="simpleSearchBarContainer">
+    <h1>
+      <img src="../images/pokeball.png" class="pokeball-icon" alt="Pokéball icon" />
+      Pokémon Go! Pokédex
+      <img src="../images/pokeball.png" class="pokeball-icon" alt="Pokéball icon" />
+    </h1>
+    <div class="simpleSearchBar">
+      <input type="text" id="searchBar" placeholder="Search for a Pokémon" />
+      <button type="button" id="searchButton">
+        <i class="fa-solid fa-magnifying-glass"></i> Search
+      </button>
+  
+      <button type="button" id="openAdvSearchButton">
+        <i class="fa-solid fa-sliders"></i> Advanced Search
+      </button>
+    </div>
   </div>
 
   <!-- Advanced Search Bar
   opens up after the button is pressed -->
+  <!-- TODO -->
   <div class="advSearchBar" style="display: none;">
     <h1>Advanced Search</h1>
   </div>
 
   <!-- Grid map for display -->
-  <!-- !NOT FINISHED CHANGE LATER -->
   <div class="pokemonGridContainer">
     <div class="pokemonGrid">
     </div>
   </div>
 
 </body>
+
 <!--Do not move the line below-->
 <script src="./dist/DO_NOT_TOUCH.js"></script>
 <script src="./dist/DataClasses.js"></script>
