--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
     </a>
   
     <nav class="nav-links">
-      <a href="/html/index.html">Home</a>
+      <a href="../html/index.html">Home</a>
       <!-- TODO Link this to the map -->
       <a href="/">Map</a>
     </nav>
@@ -63,84 +63,8 @@
 </body>
 
 <!--Do not move the line below-->
-<script src="./dist/DO_NOT_TOUCH.js"></script>
-<script src="./dist/DataClasses.js"></script>
 <script src="../dist/DO_NOT_TOUCH.js"></script>
-<script src="../dist/datatypes.js"></script>
-<script src="../dist/compare.js"></script>
-<script src="../dist/utility.js"></script>
-<script src="../dist/datastructures.js"></script>
-<script src="../dist/algorithms.js"></script>
-<!--Do not move the line above-->
-<script src="../dist/index.js"></script>
-
-</html><!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pokédex</title>
-  <link rel="stylesheet" href="../css/index.css" />
-  <link rel="icon" href="../images/pokeball.png" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-</head>
-
-<body>
-
-  <!-- Title Bar -->
-  <header class="bar">
-    <a href="/html/index.html" class="logo">
-      <img src="../images/pokeball.png" alt="Logo" width="40" height="40" />
-    </a>
-  
-    <nav class="nav-links">
-      <a href="/html/index.html">Home</a>
-      <!-- TODO Link this to the map -->
-      <a href="/">Map</a>
-    </nav>
-  
-    <div class="gradient-bar"></div>
-    <div class="shimmer"></div>
-  </header>
-  
-  <!-- Search Bar -->
-  <div class="simpleSearchBarContainer">
-    <h1>
-      <img src="../images/pokeball.png" class="pokeball-icon" alt="Pokéball icon" />
-      Pokémon Go! Pokédex
-      <img src="../images/pokeball.png" class="pokeball-icon" alt="Pokéball icon" />
-    </h1>
-    <div class="simpleSearchBar">
-      <input type="text" id="searchBar" placeholder="Search for a Pokémon" />
-      <button type="button" id="searchButton">
-        <i class="fa-solid fa-magnifying-glass"></i> Search
-      </button>
-  
-      <button type="button" id="openAdvSearchButton">
-        <i class="fa-solid fa-sliders"></i> Advanced Search
-      </button>
-    </div>
-  </div>
-
-  <!-- Advanced Search Bar
-  opens up after the button is pressed -->
-  <!-- TODO -->
-  <div class="advSearchBar" style="display: none;">
-    <h1>Advanced Search</h1>
-  </div>
-
-  <!-- Grid map for display -->
-  <div class="pokemonGridContainer">
-    <div class="pokemonGrid">
-    </div>
-  </div>
-
-</body>
-
-<!--Do not move the line below-->
-<script src="./dist/DO_NOT_TOUCH.js"></script>
-<script src="./dist/DataClasses.js"></script>
+<script src="../dist/DataClasses.js"></script>
 <script src="../dist/DO_NOT_TOUCH.js"></script>
 <script src="../dist/datatypes.js"></script>
 <script src="../dist/compare.js"></script>
