--- a/html/index.html
+++ b/html/index.html
@@ -21,8 +21,7 @@
     <nav class="navLinks">
       <a href="../html/index.html">Home</a>
       <a href="../html/table.html">Table</a>
-      <!-- TODO Link this to the map -->
-      <a href="">Map</a>
+      <a href="../html/map.html">Map</a>
     </nav>
 
     <div class="gradient-bar"></div>
