--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pokédex: Home</title>
+  <link rel="stylesheet" href="../css/navbar.css" />
   <link rel="stylesheet" href="../css/index.css" />
   <link rel="icon" href="../images/pokeball.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -41,24 +42,43 @@
         <i class="fa-solid fa-magnifying-glass"></i> Search
       </button>
 
-      <button type="button" id="openAdvSearchButton">
+      <button type="button" id="openAdvSearchButton" onclick="toggleAdvancedSearch()">
         <i class="fa-solid fa-sliders"></i> Advanced Search
       </button>
     </div>
 
-    <!-- Advanced Search Bar
-    opens up after the button is pressed -->
-    <div class="advSearchBar">
+    <!-- Advanced Search Bar 
+  opens up after the button is pressed -->
+    <div class="advSearchBar hidden">
       <div class="timePicker">
         <label for="timePickerStart">Start:</label>
-        <input type="time" id="timePickerStart" required/>
+        <input type="time" id="timePickerStart" required />
 
         <label for="timePickerEnd">End:</label>
-        <input type="time" id="timePickerEnd" required/>
+        <input type="time" id="timePickerEnd" required />
       </div>
-      
-      <input type="number" id="longitude" placeholder="Longitude..."/>
-      <input type="number" id="latitude" placeholder="Latitude..."/>
+
+      <div class="coordinates-container">
+        <div class="coordinate-column">
+          <div class="column-header">Longitude</div>
+          <div class="min-max-group">
+            <input type="number" id="minLongitude" placeholder="Min longitude..." step="0.0001" />
+          </div>
+          <div class="min-max-group">
+            <input type="number" id="maxLongitude" placeholder="Max longitude..." step="0.0001" />
+          </div>
+        </div>
+
+        <div class="coordinate-column">
+          <div class="column-header">Latitude</div>
+          <div class="min-max-group">
+            <input type="number" id="minLatitude" placeholder="Min latitude..." step="0.0001" />
+          </div>
+          <div class="min-max-group">
+            <input type="number" id="maxLatitude" placeholder="Max latitude..." step="0.0001" />
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
