--- a/html/table.html
+++ b/html/table.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokédex: Table</title>
+    <link rel="stylesheet" href="../css/navbar.css" />
     <link rel="stylesheet" href="../css/table.css" />
     <link rel="icon" href="../images/pokeball.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -20,7 +21,7 @@
         <nav class="navLinks">
             <a href="../html/index.html">Home</a>
             <a href="../html/table.html">Table</a>
-            <a href="">Map</a>
+            <a href="../html/map.html">Map</a>
         </nav>
 
         <div class="gradientBar"></div>
