--- a/html/index.html
+++ b/html/index.html
@@ -38,7 +38,7 @@
     </h1>
     <div class="simpleSearchBar">
       <input type="text" id="searchBar" placeholder="Search for a Pokémon" />
-      <button type="button" id="searchButton">
+      <button type="button" id="searchButton" onclick="handleSearchClick()">
         <i class="fa-solid fa-magnifying-glass"></i> Search
       </button>
 
