--- a/html/map.html
+++ b/html/map.html
@@ -117,8 +117,7 @@
 
       <div class="filterSection">
         <div>
-          <label for="coordFilter">Shortest Distance to Catch All 151 Pokemons From Your Latitude
-            and Longitude</label>
+          <label for="coordFilter">Shortest Distance to Catch All 151 Pokemons From Your :Location</label>
           <div class="coordFilter">
             <input type="number" id="fromLatitudeFilter" placeholder="Latitude..." step="0.0001" min="-90" max="90" />
             <input type="number" id="fromLongitudeFilter" placeholder="Longitude..." step="0.0001" min="-180" max="180" />
