--- a/html/table.html
+++ b/html/table.html
@@ -32,7 +32,6 @@
 
         <div class="screenWrapper">
             <div class="tableContainer">
-                <!-- Pokédex buttons and light indicators -->
                 <div class="pokedexTop">
                     <div class="light big"></div>
                     <div class="lights">
@@ -57,11 +56,52 @@
                         </thead>
                         <tbody id="pokemonTableBody">
                             <!-- Takes the search results and displays accordingly -->
+                            <tr>
+                                <td>Bulbasaur</td>
+                                <td>Grass/Poison</td>
+                                <td>-122.4194</td>
+                                <td>37.7749</td>
+                                <td>12:00 PM</td>
+                            </tr>
+                            <tr>
+                                <td>Bulbasaur</td>
+                                <td>Grass/Poison</td>
+                                <td>-122.4194</td>
+                                <td>37.7749</td>
+                                <td>12:00 PM</td>
+                            </tr>
+                            <tr>
+                                <td>Bulbasaur</td>
+                                <td>Grass/Poison</td>
+                                <td>-122.4194</td>
+                                <td>37.7749</td>
+                                <td>12:00 PM</td>
+                            </tr>
+                            <tr>
+                                <td>Bulbasaur</td>
+                                <td>Grass/Poison</td>
+                                <td>-122.4194</td>
+                                <td>37.7749</td>
+                                <td>12:00 PM</td>
+                            </tr>
+                            <tr>
+                                <td>Bulbasaur</td>
+                                <td>Grass/Poison</td>
+                                <td>-122.4194</td>
+                                <td>37.7749</td>
+                                <td>12:00 PM</td>
+                            </tr>
+                            <tr>
+                                <td>Bulbasaur</td>
+                                <td>Grass/Poison</td>
+                                <td>-122.4194</td>
+                                <td>37.7749</td>
+                                <td>12:00 PM</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
 
-                <!-- Pokédex button controls -->
                 <div class="pokedexControls">
                     <div class="dpad">
                         <div class="dpad-up"></div>
