--- a/html/index.html
+++ b/html/index.html
@@ -56,6 +56,8 @@
 
         <label for="timePickerEnd">End:</label>
         <input type="time" id="timePickerEnd" required />
+        <button type="button" onclick="logTimeRange()">Log Time Range</button>
+
       </div>
 
       <div class="coordinates-container">
@@ -93,10 +95,10 @@
 <!--Do not move the line below-->
 <script src="../dist/DO_NOT_TOUCH.js"></script>
 <script src="../dist/datatypes.js"></script>
-<script src="../dist/compare.js"></script>
+<!-- <script src="../dist/compare.js"></script>
 <script src="../dist/utility.js"></script>
 <script src="../dist/datastructures.js"></script>
-<script src="../dist/algorithms.js"></script>
+<script src="../dist/algorithms.js"></script> -->
 <!--Do not move the line above-->
 <script src="../dist/index.js"></script>
 
