--- a/html/table.html
+++ b/html/table.html
@@ -88,4 +88,17 @@
 
 </body>
 
+<!--Do not move the line below-->
+<script src="../dist/DO_NOT_TOUCH.js"></script>
+<script src="../dist/DataClasses.js"></script>
+<script src="../dist/datatypes.js"></script>
+<script src="../dist/compare.js"></script>
+<script src="../dist/utility.js"></script>
+<script src="../dist/datastructures.js"></script>
+<script src="../dist/algorithms.js"></script>
+<script src="../dist/map.js"></script>
+<!--Do not move the line above-->
+<script src="../dist/index.js"></script>
+
+
 </html>
