--- a/html/table.html
+++ b/html/table.html
@@ -55,16 +55,11 @@
                             </tr>
                         </thead>
                         <tbody id="pokemonTableBody">
-                            <!-- Takes the search results and displays accordingly -->
-                            <tr>
-                                <td>Bulbasaur</td>
-                                <td>Grass/Poison</td>
-                                <td>-122.4194</td>
-                                <td>37.7749</td>
-                                <td>12:00 PM</td>
-                            </tr>
                         </tbody>
                     </table>
+                    <div id="pageInfo"></div>
+                    <div id="paginationContainer"></div>
+
                 </div>
 
                 <div class="pokedexControls">
@@ -96,7 +91,6 @@
 <script src="../dist/utility.js"></script>
 <script src="../dist/datastructures.js"></script>
 <script src="../dist/algorithms.js"></script>
-<script src="../dist/map.js"></script>
 <!--Do not move the line above-->
 <script src="../dist/index.js"></script>
 
