Runtime Algorithm Display

--- a/html/index.html
+++ b/html/index.html
@@ -28,6 +28,12 @@
     <div class="gradientBar"></div>
     <div class="shimmer"></div>
   </header>
+  
+  <div class="runtimeDisplayContainer">
+    <h3>Runtime For Each Algorithm: </h3>
+    <br>
+    <p class="runtimeDisplay"></p>
+  </div>
 
   <!-- Search Bar -->
   <div class="simpleSearchBarContainer">
