--- a/html/map.html
+++ b/html/map.html
@@ -22,7 +22,7 @@
     <nav class="navLinks">
       <a href="../html/index.html">Home</a>
       <a href="../html/table.html">Table</a>
-      <a href="../html/table.html">Map</a>
+      <a href="../html/map.html">Map</a>
     </nav>
 
     <div class="gradientBar"></div>
