--- a/html/index.html
+++ b/html/index.html
@@ -86,6 +86,8 @@
             <input type="number" id="maxLatitude" placeholder="Max latitude..." step="0.0001" />
           </div>
         </div>
+
+        <!-- TODO Create a new thing for types so that the user can filter by types -->
       </div>
     </div>
   </div>
