--- a/html/table.html
+++ b/html/table.html
@@ -30,6 +30,7 @@
 
     <div class="runtimeDisplayContainer">
         <h3>Runtime For Each Algorithm:</h3>
+        <button type="button" id="runtimeButton" onclick="nextRuntime()">Next </button>
         <br />
         <p class="runtimeDisplay"></p>
     </div>
