--- a/html/map.html
+++ b/html/map.html
@@ -37,6 +37,14 @@
     </h1>
   </div>
 
+  <div class="runtimeDisplayContainer">
+    <h3>Runtime For Each Algorithm:</h3>
+    <button type="button" id="runtimeButton" onclick="showPerformanceTime()">Next </button>
+    <br />
+    <p class="runtimeDisplay"></p>
+  </div>
+  
+
 
   <!-- Search Bar -->
   <div class="mainContainer">
