--- a/html/index.html
+++ b/html/index.html
@@ -60,10 +60,10 @@
     <div class="advSearchBar hidden">
       <div class="timePicker">
         <label for="timePickerStart">Start:</label>
-        <input type="time" id="timePickerStart" required />
+        <input type="time" id="timePickerStart" step="1" required />
 
         <label for="timePickerEnd">End:</label>
-        <input type="time" id="timePickerEnd" required />
+        <input type="time" id="timePickerEnd" step="1" required />
 
       </div>
 
@@ -88,7 +88,10 @@
           </div>
         </div>
 
-        <!-- TODO Create a new thing for types so that the user can filter by types -->
+      </div>
+      <div class="typePicker">
+        <label for="typeInput">Type: </label>
+        <input type="text" id="typeInput" placeholder="Type..."/>
       </div>
     </div>
   </div>
