Fixed pathfinding getting duplicated pokemons

--- a/html/map.html
+++ b/html/map.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
 
-<body>
+<body onload="showPerformanceTime()">
   <!-- Title Bar -->
   <header class="bar">
     <a href="../html/index.html" class="logo">
