--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,7 @@
   </header>
   
   <div class="runtimeDisplayContainer">
-    <h3>Runtime For Each Algorithm: </h3>
+    <h3 id="runTimeHeading">Runtime For Each Algorithm: </h3>
     <button type="button" id="runtimeButton" onclick="showPerformanceTime()">Next </button>
     <br>
     <p class="runtimeDisplay"></p>
