--- a/html/table.html
+++ b/html/table.html
@@ -29,9 +29,9 @@
     </header>
 
     <div class="runtimeDisplayContainer">
-        <h3>Runtime For Each Algorithm:</h3>
+        <h3 id="runTimeHeading">Runtime For Each Algorithm:</h3>
         <button type="button" id="runtimeButton" onclick="showPerformanceTime()">Next </button>
-        <br />
+        <br/>
         <p class="runtimeDisplay"></p>
     </div>
 
