--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
-<body>
+<body onload="showPerformanceTime()">
 
   <!-- Title Bar -->
   <header class="bar">
@@ -30,7 +30,7 @@
   </header>
 
   <div class="runtimeDisplayContainer">
-    <h3>Runtime For Each Algorithm: </h3>
+    <h3 id="runTimeHeading">Runtime For Each Algorithm: </h3>
     <button type="button" id="runtimeButton" onclick="showPerformanceTime()">Next </button>
     <br>
     <p class="runtimeDisplay"></p>
@@ -60,10 +60,10 @@
     <div class="advSearchBar hidden">
       <div class="timePicker">
         <label for="timePickerStart">Start:</label>
-        <input type="time" id="timePickerStart" required />
+        <input type="time" id="timePickerStart" step="1" required />
 
         <label for="timePickerEnd">End:</label>
-        <input type="time" id="timePickerEnd" required />
+        <input type="time" id="timePickerEnd" step="1" required />
 
       </div>
 
