--- a/html/map.html
+++ b/html/map.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
 
-<body>
+<body onload="showPerformanceTime()">
   <!-- Title Bar -->
   <header class="bar">
     <a href="../html/index.html" class="logo">
@@ -38,7 +38,7 @@
   </div>
 
   <div class="runtimeDisplayContainer">
-    <h3>Runtime For Each Algorithm:</h3>
+    <h3 id="runTimeHeading">Runtime For Each Algorithm:</h3>
     <button type="button" id="runtimeButton" onclick="showPerformanceTime()">Next </button>
     <br />
     <p class="runtimeDisplay"></p>
