--- a/html/table.html
+++ b/html/table.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 
-<body>
+<body onload="showPerformanceTime()">
     <!-- Title Bar -->
     <header class="bar">
         <a href="../html/index.html" class="logo">
@@ -29,9 +29,9 @@
     </header>
 
     <div class="runtimeDisplayContainer">
-        <h3>Runtime For Each Algorithm:</h3>
+        <h3 id="runTimeHeading">Runtime For Each Algorithm:</h3>
         <button type="button" id="runtimeButton" onclick="showPerformanceTime()">Next </button>
-        <br />
+        <br/>
         <p class="runtimeDisplay"></p>
     </div>
 
@@ -51,14 +51,14 @@
                     <table id="pokemonTable">
                         <thead>
                             <tr>
-                              <th><button type="button" class="sortable-header" onclick="sortTableBy('name')">Pokémon</button></th>
-                              <th><button type="button" class="sortable-header" onclick="sortTableBy('type')">Type</button></th>
-                              <th><button type="button" class="sortable-header" onclick="sortTableBy('longitude')">Longitude</button></th>
-                              <th><button type="button" class="sortable-header" onclick="sortTableBy('latitude')">Latitude</button></th>
-                              <th><button type="button" class="sortable-header" onclick="sortTableBy('time')">Time</button></th>
+                              <th><button type="button" class="sortable-header" id="tableNameOutput" onclick="">Pokémon</button></th>
+                              <th><button type="button" class="sortable-header" id="tableTypeOutput" onclick="">Type</button></th>
+                              <th><button type="button" class="sortable-header" id="tableLongitudeOutput" onclick="">Longitude</button></th>
+                              <th><button type="button" class="sortable-header" id="tableLatitudeOutput" onclick="">Latitude</button></th>
+                              <th><button type="button" class="sortable-header" id="tableTimeOutput" onclick="">Time</button></th>
                             </tr>
                           </thead>
-                          
+
                         <tbody id="pokemonTableBody"></tbody>
                     </table>
 
