--- a/html/index.html
+++ b/html/index.html
@@ -91,7 +91,27 @@
       </div>
       <div class="typePicker">
         <label for="typeInput">Type: </label>
-        <input type="text" id="typeInput" placeholder="Type..."/>
+        <select id="typeInput" name="typeInput">
+          <option value=""> Select </option>
+          <option value="Normal"> Normal </option>
+          <option value="Fire"> Fire </option>
+          <option value="Water"> Water </option>
+          <option value="Grass"> Grass </option>
+          <option value="Electric"> Electric </option>
+          <option value="Ice"> Ice </option>
+          <option value="Fighting"> Fighting </option>
+          <option value="Poison"> Poison </option>
+          <option value="Ground"> Ground </option>
+          <option value="Flying"> Flying </option>
+          <option value="Psychic"> Psychic </option>
+          <option value="Bug"> Bug </option>
+          <option value="Rock"> Rock </option>
+          <option value="Ghost"> Ghost </option>
+          <option value="Dragon"> Dragon </option>
+          <option value="Steel"> Steel </option>
+          <option value="Dark"> Dark </option>
+          <option value="Fairy"> Fairy </option>
+        </select>
       </div>
     </div>
   </div>
