comments + tiny fixes

--- a/html/table.html
+++ b/html/table.html
@@ -51,11 +51,11 @@
                     <table id="pokemonTable">
                         <thead>
                             <tr>
-                              <th><button type="button" class="sortable-header" id="tableNameOutput" onclick="">Pokémon</button></th>
-                              <th><button type="button" class="sortable-header" id="tableTypeOutput" onclick="">Type</button></th>
-                              <th><button type="button" class="sortable-header" id="tableLongitudeOutput" onclick="">Longitude</button></th>
-                              <th><button type="button" class="sortable-header" id="tableLatitudeOutput" onclick="">Latitude</button></th>
-                              <th><button type="button" class="sortable-header" id="tableTimeOutput" onclick="">Time</button></th>
+                              <th><button type="button" class="sortable-header" id="tableNameOutput" onclick="toggleTableSort()">Pokémon</button></th>
+                              <th><button type="button" class="sortable-header" id="tableTypeOutput" onclick="toggleTableSort()">Type</button></th>
+                              <th><button type="button" class="sortable-header" id="tableLongitudeOutput" onclick="toggleTableSort()">Longitude</button></th>
+                              <th><button type="button" class="sortable-header" id="tableLatitudeOutput" onclick="toggleTableSort()">Latitude</button></th>
+                              <th><button type="button" class="sortable-header" id="tableTimeOutput" onclick="toggleTableSort()">Time</button></th>
                             </tr>
                           </thead>
 
